test/typecheck/fail/duplicate_type_id3.sail
struct foo1 = { bar1 : unit }

union foo1 = { Bar2 : unit }